--- a/web/src/utilities/variables.scss
+++ b/web/src/utilities/variables.scss
@@ -31,3 +31,8 @@ $back-yellow: #fff9e5;
 
 $main-orange: #ff6600;
 $back-orange: #fff2e5;
+
+$main-purple: #a64dff;
+$back-purple: #f2e5ff;
+$dark-purple: #6600cc;
+$light-purple: #e5d9ff;
