--- a/web/src/sections/Exploratory.module.scss
+++ b/web/src/sections/Exploratory.module.scss
@@ -165,3 +165,19 @@ $padding: 12px;
         font-size: 14px;
     }
 }
+
+.correlation {
+    max-width: 878px;
+}
+
+.correlationContainer {
+    display: flex;
+
+    & .description {
+        margin-top: 20px;
+        margin-left: 20px;
+        padding-left: 20px;
+
+        border-left: 1px solid $gray-border;
+    }
+}
